package nl.hhs.project.koffieapp.koffieapp.model.payload;

public class CoffeeResponse {

}
