@startuml

title __PAYLOAD's Class Diagram__\n

  package nl.hhs.project.koffieapp.koffieapp {
    package nl.hhs.project.koffieapp.koffieapp.model {
      package nl.hhs.project.koffieapp.koffieapp.model.payload {
        class ApiResponse {
            - success : boolean
            - message : String
            + ApiResponse()
            + isSuccess()
            + getMessage()
            + setSuccess()
            + setMessage()
            + equals()
            + hashCode()
            # canEqual()
            + toString()
        }
      }
    }
  }
  

  package nl.hhs.project.koffieapp.koffieapp {
    package nl.hhs.project.koffieapp.koffieapp.model {
      package nl.hhs.project.koffieapp.koffieapp.model.payload {
        class CoffeeResponse {
        }
      }
    }
  }
  

  package nl.hhs.project.koffieapp.koffieapp {
    package nl.hhs.project.koffieapp.koffieapp.model {
      package nl.hhs.project.koffieapp.koffieapp.model.payload {
        class JwtAuthenticationResponse {
            - accessToken : String
            - tokenType : String
            + JwtAuthenticationResponse()
            + getUserService()
            + getUser()
            + getAccessToken()
            + getTokenType()
            + setUserService()
            + setUser()
            + setAccessToken()
            + setTokenType()
            + equals()
            + hashCode()
            # canEqual()
            + toString()
        }
      }
    }
  }
  

  JwtAuthenticationResponse o-- UserService : userService
  JwtAuthenticationResponse o-- UserDTO : user


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
